# zed-mermaid-plugin

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL_DEV.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_STATUS.md  README.md  TESTING.md  TODO.md  extension.toml  test-diagram.md
docs/plans/: 2026-02-08-feat-mermaid-preview-plugin-implementation-plan.md  2026-02-08-feat-zed-mermaid-preview-plugin-plan.md
languages/mermaid/: config.toml
lsp/: Cargo.toml
lsp/src/: main.rs  mermaid-config.json  render.rs
scripts/: build.sh  dev-setup.sh  install.sh
src/: cache.rs  lib.rs  renderer.rs  validator.rs
