[package]
name = "mermaid-preview"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for cache keys
sha2 = "0.10"

# Regex for input validation
regex = "1.10"

# Async runtime (WASM-compatible)
tokio = { version = "1.0", default-features = false, features = ["sync"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
