[package]
name = "mermaid-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Mermaid language server for Zed"

[[bin]]
name = "mermaid-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.0"
which = "5"
regex = "1.10"
tempfile = "3.10"
once_cell = "1.19"
base64 = "0.22"
chrono = { version = "0.4", features = ["std"] }
html-escape = "0.2"
log = "0.4"
env_logger = "0.11"
